--- a/map.html
+++ b/map.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>Седона: Карта штата</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
                         </li>
                     </ul>
                     <div class="index-logo">
-                        <a href="index.html"><img src="img/logo.png" width="138" height="70" alt="Седона"></a>
+                        <a class="logo-link" href="index.html"><img src="img/logo.png" width="138" height="70" alt="Седона"></a>
                     </div>
                 </nav>
             </div>
@@ -42,7 +42,6 @@
         <footer class="footer search-form-footer clearfix">
             <section class="footer-contacts">
                 <a href="#">#visitsedona</a>
-                <br>
             </section>
             <section class="footer-social">
                 <a class="social-btn social-btn-tw" href="#">Твиттер</a>
