--- a/index.html
+++ b/index.html
@@ -109,24 +109,24 @@
                     <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
                         <div class="search-form-line clearfix">
                             <label for="day-in">Дата заезда:</label>
-                            <input class="date field" type="text" id="day-in" name="day-in" placeholder="24 апреля 2017" required>
-                            <div class="calendar"></div>
+                            <input class="date field" type="text" id="day-in" name="day-in" value="24 апреля 2017" required>
+                            <a class="calendar">Календарь</a>
                         </div>
                         <div class="search-form-line clearfix">
                             <label for="day-out">Дата выезда:</label>
-                            <input class="date field" type="text" id="day-out" name="day-out" placeholder="4 июля 2017" required>
-                            <div class="calendar"></div>
+                            <input class="date field" type="text" id="day-out" name="day-out" value="4 июля 2017" required>
+                            <a class="calendar">Календарь</a>
                         </div>
                         <div class="search-form-line clearfix">
                             <div class="half-width">
                                 <label for="adults">Взрослые:</label>
                                 <div class="number-container">
                                     <button class="btn minus-btn" type="button">
-                                        <i class="minus-icon"></i>
+                                        <i class="minus-icon">Минус</i>
                                     </button>
                                     <input class="number field" type="text" name="adults" id="adults" value="2" size="1" required>
                                     <button class="btn plus-btn" type="button">
-                                        <i class="plus-icon"></i>
+                                        <i class="plus-icon">Плюс</i>
                                     </button>
                                 </div>
                             </div>
@@ -134,16 +134,16 @@
                                 <label for="kids">Дети:</label>
                                 <div class="number-container">
                                     <button class="btn minus-btn" type="button">
-                                        <i class="minus-icon"></i>
+                                        <i class="minus-icon">Минус</i>
                                     </button>
-                                    <input class="number field" type="text" name="kids" id="kids" value="9" size="1">
+                                    <input class="number field" type="text" name="kids" id="kids" value="0" size="1">
                                     <button class="btn plus-btn" type="button">
-                                        <i class="plus-icon"></i>
+                                        <i class="plus-icon">Плюс</i>
                                     </button>
                                 </div>
                             </div>
                         </div>
-                        <button class="find-btn" type="button"><span>Найти</span></button>
+                        <button class="find-btn" type="submit"><span>Найти</span></button>
                     </form>
                 </div>
             </section>
@@ -154,7 +154,6 @@
         <footer class="footer main-footer clearfix">
             <section class="footer-contacts">
                 <a href="#">#visitsedona</a>
-                <br>
             </section>
             <section class="footer-social">
                 <a class="social-btn social-btn-tw" href="#">Твиттер</a>
