--- a/inner.html
+++ b/inner.html
@@ -129,10 +129,10 @@
                     </div>
                     <div class="ratio-info">
                         <div class="stars">
-                            <span class="star-icon">&#8727</span>
-                            <span class="star-icon">&#8727</span>
-                            <span class="star-icon">&#8727</span>
-                            <span class="star-icon">&#8727</span>
+                            <span class="star-icon">&#9733;</span>
+                            <span class="star-icon">&#9733;</span>
+                            <span class="star-icon">&#9733;</span>
+                            <span class="star-icon">&#9733;</span>
                         </div>
                         <span class="ratio">Рейтинг: 8,5</span>
                     </div>
@@ -160,9 +160,9 @@
                     </div>
                     <div class="ratio-info">
                         <div class="stars">
-                            <span class="star-icon">&#8727</span>
-                            <span class="star-icon">&#8727</span>
-                            <span class="star-icon">&#8727</span>
+                            <span class="star-icon">&#9733;</span>
+                            <span class="star-icon">&#9733;</span>
+                            <span class="star-icon">&#9733;</span>
                         </div>
                         <span class="ratio">Рейтинг: 8,9</span>
                     </div>
@@ -190,8 +190,8 @@
                     </div>
                     <div class="ratio-info">
                         <div class="stars">
-                            <span class="star-icon">&#8727</span>
-                            <span class="star-icon">&#8727</span>
+                            <span class="star-icon">&#9733;</span>
+                            <span class="star-icon">&#9733;</span>
                         </div>
                         <span class="ratio">Рейтинг: 9,2</span>
                     </div>
