Добавил outline для кнопок формы поиска

--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
                         <div class="search-form-line clearfix">
                             <label for="day-in">Дата заезда:</label>
                             <input class="date field" type="text" id="day-in" name="day-in" value="24 апреля 2017" required>
-                            <a class="calendar">Календарь</a>
+                            <a class="calendar" href="#">Календарь</a>
                         </div>
                         <div class="search-form-line clearfix">
                             <label for="day-out">Дата выезда:</label>
                             <input class="date field" type="text" id="day-out" name="day-out" value="4 июля 2017" required>
-                            <a class="calendar">Календарь</a>
+                            <a class="calendar" href="#">Календарь</a>
                         </div>
                         <div class="search-form-line clearfix">
                             <div class="half-width">
