--- a/inner.html
+++ b/inner.html
@@ -104,7 +104,7 @@
                         </ul>
                     </div>
                     <div class="sorting-btn">
-                        <a href="#" class="up-icon">По возрастанию</a>
+                        <a class="up-icon" href="#">По возрастанию</a>
                         <a class="active down-icon" href="#">По убыванию</a>
                     </div>
                 </div>
